# Memory-OS

./: .coverage  .gitignore  CODEBASE_GUIDE.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  main.py  pyproject.toml  tfidf_model.json
agents/: personal_agent.py
api/: routes.py
assistant/: actions.py  agent.py  prompts.py
cli/: main.py  parser.py
cli/commands/: ask.py  benchmark.py  config_cmd.py  doctor.py  export.py  import_cmd.py  init.py  logs.py  monitor.py  plugins.py  restart.py  start.py  status.py  stop.py  sync.py  version.py  workspace.py
cli/tui/: __init__.py  app.py
cli_memory_os-0.1.12/: pyproject.toml
cli_memory_os-0.1.6/storage/: tech_detector.py
cli_memory_os-0.1.6/tests/: test_sync_ask_cli.py
connectors/: base.py  calendar.py  github.py  gmail.py  notion.py  registry.py
core/: chunker.py  consolidator.py  context_builder.py  db.py  embedder.py  embeddings.py  extractor.py  graph_store.py  llm.py  models.py  pipeline.py  vector_store.py
database/: schema.sql
docs/: README.md
docs/architecture/: data-flow.md  overview.md
docs/cli/: usage.md
docs/core/: systems.md
docs/development/: conventions.md
docs/features/: core-features.md
docs/integrations/: connectors.md
docs/reference/: ontology.md
docs/setup/: installation.md
infrastructure/: compose.py  config.py  docker.py  health.py  observability.py  workspace.py
integrations/: calendar_sync.py  github_sync.py  gmail_sync.py  notion_sync.py
memory/: events.py  graph_manager.py  memory_manager.py  quality.py  retrieval_engine.py
models/: memory.py
ontology/: entity_types.py  relationship_types.py
qdrant_storage/: memory_os_metadata.json  meta.json
retrieval/: context.py  fusion.py  project_aggregator.py  search.py  searcher.py
scratch/: test_extractor.py  test_extractor_failures.py
scripts/: consolidate_graph.py  inspect_gmail.py  reindex_all.py  test_tools.py
storage/: db.py  graph.py  schema.sql  tech_detector.py
tests/: test_cli_integration.py  test_commands_phase2.py  test_compose_manager.py  test_first_time_user_experience.py  test_infrastructure_stabilization.py  test_tui.py  test_v1_features.py
tests/test_temp_workspace/: config.toml  docker-compose.yml
