[project]
name = "memory-os"
version = "0.1.0"
description = "CLI-based Personal Knowledge Operating System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "composio>=0.13.1",
    "composio-langchain>=0.13.1",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.9.1",
    "neo4j>=5.21.0",
    "pytest>=9.1.1",
]

