[project]
name = "memory-os"
version = "0.1.0"
description = "CLI-based Personal Knowledge Operating System"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Memory-OS Authors", email = "info@memory-os.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["RAG", "Knowledge-Graph", "Vector-Search", "Personal-Assistant", "LLM", "Composio"]
dependencies = [
    "composio>=0.13.1",
    "composio-langchain>=0.13.1",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.9.1",
    "neo4j>=5.21.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
memory-os = "cli.main:cli_entrypoint"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "qdrant_storage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
