[project]
name = "cli-memory-os"
version = "0.1.4"
description = "CLI-based Personal Knowledge Operating System"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Anirudh T", email = "anirudh200584@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["RAG", "Knowledge-Graph", "Vector-Search", "Personal-Assistant", "LLM", "Composio"]
dependencies = [
    "composio==0.13.1",
    "composio-langchain==0.13.1",
    "langchain==1.3.9",
    "langchain-groq==1.1.3",
    "python-dotenv==1.2.2",
    "qdrant-client==1.18.0",
    "neo4j==6.2.0",
    "sentence-transformers==5.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
memory-os = "cli.main:cli_entrypoint"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "qdrant_storage*", "clean_env*", ".venv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
